Prevent overflowY and finish layout for sm screens

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@ code {
     monospace;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 
 
 /* OVERRIDES */
